test/compile_errors/err_null_not_integer_comparison.w
//! expect-check-fail: null is not an integer; use a typed pointer context

fn main:
    if null == 0:
        print("bad")
